syntax = "proto3";

package vertis.broker.holocron.test;
option java_multiple_files = true;

import "vertis/holocron/utils.proto";
import "vertis/holocron/common.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

message SimpleHoloOffer {
    option (scalapb.message).no_box = true;

    string id = 1;
    google.protobuf.Timestamp event_timestamp = 2[(scalapb.field).no_box=true];
    vertis.holocron.Action action = 3;
    string data = 4;
    uint32 change_version = 5;
}
